Document JVM tuning and coding rules for Jules
Added JVM tuning parameters and coding patterns for Jules.